css/_uswds-theme-custom-styles.scss
/* ... */
.label-alpha,
.label-in-progress {
  @extend %label-maturity;
  background-color: color("gold-20v");
}

.label-beta,
.label-next {
  @extend %label-maturity;
  background-color: color("primary-vivid");
  color: color("white");
}

.label-upcoming {
  @extend %label-maturity;
  @include u-text("ls-1", "normal");
  @include u-border("base-light", 1px);
  color: color("base-dark");
  background-color: color("transparent");
}

.label-recommended,
.label-done {
  @extend %label-maturity;
  background-color: color("green-cool-20v");
}

.label-cancelled {
  @extend %label-maturity;
  background-color: color("red-50v");
  color: color("white");
}

.label-archived {
  @extend %label-maturity;
  @include set-text-and-bg("red-30");
}

.label-stale {
  @extend %label-maturity;
  @include set-text-and-bg("yellow-20v");
}

.heading-margin-alt {
  margin-top: units(7);
}

.site-subheading {
  @include typeset-h6;
  @include u-font("lang", "3xs");
  color: color("black-transparent-60");
  letter-spacing: letter-spacing(1);
  margin-bottom: units(1);
  margin-top: 0;
}

.cta {
  img {
    height: units(2);
    margin-right: units(0.5);
    position: relative;
    top: units(2px);
    vertical-align: baseline;
  }
}

// Footer --------------- //

.touchpoints__container {
  padding-left: units(2);
  padding-right: units(2);
  @include at-media("desktop") {
    display: flex;
    justify-content: flex-end;
  }
  @include at-media("widescreen") {
    bottom: 0;
    position: sticky;
    z-index: z-index(500);
  }

  .usa-button {
    margin-bottom: units(2);
    @include at-media("desktop") {
      @include u-bg($site-background-color);
      margin: units(2) units(2) units(4);
    }
  }
}

.site-footer {
  @include typeset("lang");
  clear: both;

  h3 {
    margin-top: 0;
  }

  .logo-links {
    margin-bottom: units(1);
    margin-right: units(2.5);

    @include at-media("tablet") {
      float: left;
      margin-bottom: 0;
    }

    img {
      width: units(4);
    }

    a {
      @include media-link;
    }
  }

  .usa-footer__secondary-section {
    @include u-padding-bottom(0);
    @include u-padding-top(2);
    background-color: color("base-lightest");

    @include at-media("tablet") {
      padding-top: units(4);
    }
  }
}

.footer-main-img {
  display: none;
  max-width: units("card");

  @include at-media("tablet") {
    display: block;
    margin: 0;
    width: 100%;
  }
}

.footer-content {
  margin-bottom: units(5);

  h2 {
    @include typeset("lang", "lg", 2);
    margin: 0;
  }
  p {
    max-width: measure($site-measure);
  }
}

.footer-contact-links {
  @include grid-gap(2);

  h3,
  a {
    @include u-font("lang", "2xs");
  }

  h3 {
    font-weight: font-weight("normal");
    margin-bottom: 0;
    margin-top: units(2px);
  }

  a {
    color: color($site-primary-dark);
    text-decoration: underline;
  }

  img {
    width: units(5);
  }

  .usa-media-block {
    clear: both;
    line-height: line-height("lang", 3);
    margin-top: units(2.5);

    @include at-media("tablet") {
      margin-top: 0;
    }
  }

  @include at-media("tablet") {
    margin-top: units(4);
  }
}

// Pattern Preview Boxes -------- //

.preview {
  @include clearfix;
  @include u-margin-y(2);
  background-color: color("white");
  padding: units(2);
  border: units(1px) solid color("base-lightest");

  .usa-dark-background {
    @include u-padding-x(1);
    display: inline-block;
  }

  > *:first-child {
    margin-top: 0;
  }
}

// Custom preview box styles

.preview-lists {
  .usa-heading-alt {
    margin-top: 0;
  }
}

.preview-dropdown {
  padding-top: 0;
}

// Custom styles to illustrate invisible grid for web design standards

.page-grids {
  .preview {
    border: 0;
    margin-bottom: units(2.5);
    margin-top: 0;
    padding: 0;

    > *:first-child {
      margin-top: units(2);
    }
  }
}

.grid-example {
  .usa-grid {
    background: color($color-grid-light);

    > * {
      @include u-margin-y(0.5);
      color: color("white");
      padding: units(1);
      background: color($color-grid-dark);
    }
  }

  .usa-width-one-twelfth {
    @include at-media("tablet") {
      @include u-padding-x(0);
    }
  }
}

.grid-example-blank {
  .usa-grid {
    text-align: center;
  }
}

.grid-text {
  .usa-grid {
    background: color($color-grid-dark);

    > * {
      background: color($color-grid-light);
      color: color("black");
    }

    h3 {
      margin-top: 0;
    }

    p {
      margin-bottom: 0;
    }
  }
}

.usa-heading {
  color: color($site-primary-dark);
}

// Color background helpers

.usa-color-primary {
  background-color: color($site-primary);
}

.usa-color-primary-darker {
  background-color: color($site-primary-dark);
}

.usa-color-primary-darkest {
  background-color: color($site-primary-darker);
}

.usa-color-base {
  background-color: color("base-darkest");
}

.usa-color-gray-dark {
  background-color: color("base-darker");
}

.usa-color-gray-light {
  background-color: color("base-light");
}

.usa-color-white {
  background-color: color("white");
  box-shadow: inset 0 0 0 1px color("gray-cool-60");
}

.usa-color-primary-alt {
  background-color: color("accent-cool");
}

.usa-color-primary-alt-dark {
  background-color: color("accent-cool-dark");
}

.usa-color-primary-alt-darkest {
  background-color: color("accent-cool-darker");
}

.usa-color-primary-alt-light {
  background-color: color("accent-cool-light");
}

.usa-color-primary-alt-lightest {
  background-color: color("accent-cool-lighter");
}

.usa-color-secondary {
  background-color: color("secondary");
}

.usa-color-secondary-dark {
  background-color: color("secondary-dark");
}

.usa-color-secondary-darkest {
  background-color: color("secondary-darker");
}

.usa-color-secondary-light {
  background-color: color("secondary-light");
}

.usa-color-secondary-lightest {
  background-color: color("secondary-lighter");
}

.usa-color-gray {
  background-color: color("gray-cool-60");
}
/* ... */

